improve profile page

--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@
                         <h3>Event</h3>
                         <a href="#">See All</a>
                     </div>
+                    
                     <div class="event">
                         <div class="event-date">
                             <p>15</p>
@@ -484,7 +485,7 @@
                         <div class="event-info">
                             <h4>MKPathan</h4>
                             <div class="location">
-                                <img src="assets/images/settings.svg" alt="location">
+                                <img src="assets/svgs/location.svg" alt="location">
                                 <p>Marghazar</p>
                             </div>
                             <a href="More Info">More info</a>
@@ -498,35 +499,7 @@
                         <div class="event-info">
                             <h4>MKPathan</h4>
                             <div class="location">
-                                <img src="assets/images/settings.svg" alt="">
-                                <p>Marghazar</p>
-                            </div>
-                            <a href="More Info">More info</a>
-                        </div>
-                    </div>
-                    <div class="event">
-                        <div class="event-date">
-                            <p>15</p>
-                            <span>Sep</span>
-                        </div>
-                        <div class="event-info">
-                            <h4>MKPathan</h4>
-                            <div class="location">
-                                <img src="assets/images/settings.svg" alt="">
-                                <p>Marghazar</p>
-                            </div>
-                            <a href="More Info">More info</a>
-                        </div>
-                    </div>
-                    <div class="event">
-                        <div class="event-date">
-                            <p>15</p>
-                            <span>Sep</span>
-                        </div>
-                        <div class="event-info">
-                            <h4>MKPathan</h4>
-                            <div class="location">
-                                <img src="assets/images/settings.svg" alt="">
+                                <img src="assets/svgs/location.svg" alt="location">
                                 <p>Marghazar</p>
                             </div>
                             <a href="More Info">More info</a>
