--- a/profile.html
+++ b/profile.html
@@ -105,7 +105,7 @@
                 <div class="profile-left">
                     <img src="assets/images/user-logo.jpg" alt="profile-image">
                     <div class="change-profile-photo">
-                        <img src="assets/images/camera.svg" alt="change-profile-photo" class="camera">
+                        <i data-visualcompletion="css-img" class="x1b0d499 xep6ejk" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v4/ys/r/q5vAFY6damO.png?_nc_eui2=AeFqXRSJiOEtr_z8J1d46-tXcgJ46PV_3ZlyAnjo9X_dmU6ydXQ3H_YFoOUtrKhXQ9tmnSO5dMZgdC_7er2NczJE&quot;); background-position: 0px -21px; background-size: 21px 144px; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block;"></i>
                     </div>
                     <div class="account-name">
                         <h3>MKPathan <span>(Developer)</span></h3>
