imrpove profile page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
 
 
             <div class="nav-right">
-                <div class="find-friends">
-                    <p>Find Friends</p>
-                </div>
-
                 <div class="menu">
                     <img src="assets/svgs/menu.svg" alt="menu">
                 </div>
@@ -145,12 +141,13 @@
                     <a href="#"><img src="assets/images/shortcut6.jpg" alt="">Frontend Development</a>
                 </div>
             </div>
+
         </div>
         <div class="main-container">
 
             <div class="post-input-container">
                 <div class="user-profile">
-                    <img src="assets/images/user-logo.jpg" alt="">
+                    <a href="profile.html"><img src="assets/images/user-logo.jpg" alt="profile-image"></a>
                     <input type="text" placeholder="What's on your mind?">
                 </div>
 
